Updated description text

--- a/index.html
+++ b/index.html
@@ -216,6 +216,13 @@
 				<h2 class="text-center text-uppercase text-white">About</h2>
 				<hr class="star-light mb-5">
 				<div class="row">
+					<div class="col-lg-0 ml-auto">
+					</div>
+					<div class="col-lg-4 mr-auto">
+						<p>“Don’t let what you cannot do interfere with what you can do.”<br /><span style="padding-left:2em">— John Wooden</span></p>
+					</div>
+				</div>
+				<div class="row">
 					<div class="col-lg-4 ml-auto">
 						<p class="lead">My name is Mike and I'm currently an undergraduate studying Computer Science. I have been programming for almost a decade now and I never backed down from a challenge. Whenever I faced a challenging problem I approached it as a learning opportunity. </p>
 					</div>
@@ -232,6 +239,21 @@
 						</div>
 					</div>
 				</div>
+				<!--<br />
+				<div class="row">
+					<div class="col-lg-4 ml-auto">
+						<p class="lead">I've recently started practicing to draw and if you would like to see some of my work click the button below. Most of my art tends to be a mixture of 3D rendering and drawing. </p>
+						<div class="text-center mt-4 center">
+							<a class="btn btn-xl btn-outline-light" href="projects/GalleryArt.html">
+								<i class="fas fa-images"></i>
+								&nbsp;&nbsp;View Gallery
+							</a>
+						</div>
+					</div>
+					<div class="col-lg-4 mr-auto">
+						<p class="lead">Never have I considered referencing a quote by someone I've never heard of but this quote by John Wooden really resonated with me: <br /><br />“Don’t let what you cannot do interfere with what you can do.” </p>
+					</div>
+				</div>-->
 			</div>
 		</section>
 
@@ -483,7 +505,7 @@
               <h2 class="text-secondary text-uppercase mb-0">Cavalcade</h2>
               <hr class="star-dark mb-5">
               <!-- <img class="img-fluid mb-5" src="img/portfolio/submarine.png" alt=""> -->
-              <p class="mb-5">For an object oriented class I implemented my own version of a card game in Java following various design principles and other object oriented practices. What makes my version unique is that I modified the rules so that, in my own opinion, the game is easier to understand. My implementation is available to download at the link below. </p>
+              <p class="mb-5">For an object oriented class I implemented my own version of a card game in Java following various design principles and other object oriented practices. What makes my version unique is that I modified the rules so that, in my own opinion, the game is easier to understand. I have since continued to work on my implementation and made available this version which features many improvements and other significant changes. </p>
 			  <a class="btn btn-primary btn-lg rounded-pill portfolio-modal" href="projects/IndexCards.html">
 				Info
 			  </a>
