Adding kofi link

--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
 						<a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/michael-zyskind-016b47160/"><i class="fab fa-fw fa-linkedin-in"></i></a>
 						<a class="btn btn-outline-light btn-social mx-1" href="https://github.com/nonamethe2"><i class="fab fa-fw fa-github-alt"></i></a>
 						<a class="btn btn-outline-light btn-social mx-1" href="https://nonamethe2.itch.io/"><i class="fab fa-fw fa-itch-io"></i></a>
+						<a class="btn btn-outline-light btn-social mx-1" href="https://ko-fi.com/mikethedev"><i class="fas fa-donate"></i></a>
                     </div>
                     <!-- Footer About Text-->
                     <div class="col-lg-4">
