Moving script from embed to file

--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
     </body>
 	
 	<script>
-		$(function (){ <!-- on click the image either expands or shrinks -->
+		/*$(function (){ 
 			var enlarge = true;
 			$('#RESIZABLE').on('click', function (){
 				if(enlarge){
@@ -551,6 +551,6 @@
 				
 				enlarge = !enlarge;
 			});
-		});
+		});*/
 	</script>
 </html>
