--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">CS Student - Web Developer - Game Developer</p>
+                <p class="masthead-subheading font-weight-light mb-0">CS Graduate - Web Developer - Game Developer</p>
             </div>
         </header>
 		
@@ -181,7 +181,7 @@
                 <!-- Skills Section Content-->
                 <div class="row">
                     <div class="col-lg-4 ml-auto"><p class="lead">Computer Languages: <br /> C++, C, JavaScript, PL/SQL, SQL, Python, C#, Java <br /><br />Fluent In: <br />English, Russian, and Spanish</p></div>
-                    <div class="col-lg-4 mr-auto"><p class="lead">Completed coursework Includes: Database Systems, Content Management Systems, Data Structures, Data Analysis, Design and Analysis of Algorithms, Discrete Mathematics, Object-Oriented Programming, Programming Language Concepts, Distributed Systems</p></div>
+                    <div class="col-lg-4 mr-auto"><p class="lead">Completed coursework Includes: Content Management Systems, Data Analysis, Data Structures, Database Systems, Design and Analysis of Algorithms, Discrete Mathematics, Distributed Systems, Object-Oriented Programming, Programming Language Concepts, Software Testing, Symbolic Programming</p></div>
                 </div>
             </div>
         </section>
@@ -206,7 +206,7 @@
 					</div>
 				</div>
                 <div class="row">
-                    <div class="col-lg-4 ml-auto"><p class="lead">My name is Mike and I'm currently an undergraduate studying Computer Science. I have been programming for almost a decade now and I never backed down from a challenge. Whenever I faced a challenging problem I approached it as a learning opportunity.</p></div>
+                    <div class="col-lg-4 ml-auto"><p class="lead">My name is Mike and I graduated with a degree in Computer Science from DePaul University. I have been programming for almost a decade now and I never backed down from a challenge. Whenever I faced a challenging problem I approached it as a learning opportunity.</p></div>
                     <div class="col-lg-4 mr-auto"><p class="lead">I've always wanted to create a video game. I grew up playing lots of video games, and as I learned programming I thought it would be fun to make my own. It took awhile but I was able to eventually publish my first video game, Wild Runner, which I'm very proud of. </p></div>
                 </div>
             </div>
