Adding new summary and updating graphics

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">CS Graduate - Web Developer - Game Developer</p>
+                <p class="masthead-subheading font-weight-light mb-0">CS Graduate - Software Engineer - Game Developer</p>
             </div>
         </header>
 		
@@ -88,6 +88,18 @@
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-search-plus fa-3x"></i></div>
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/Wild Fighter.png" alt="" />
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Portfolio Item 9 -->
+                <div class="row">
+                    <div class="col-md-6 col-lg-4 mb-5">
+                        <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal9">
+                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-search-plus fa-3x"></i></div>
+                            </div>
+                            <img class="img-fluid" src="assets/img/portfolio/Wild Dungeons.png" alt="" />
                         </div>
                     </div>
                 </div>
@@ -180,7 +192,7 @@
                 </div>
                 <!-- Skills Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ml-auto"><p class="lead">Computer Languages: <br /> C++, C, JavaScript, PL/SQL, SQL, Python, C#, Java <br /><br />Fluent In: <br />English, Russian, and Spanish</p></div>
+                    <div class="col-lg-4 ml-auto"><p class="lead">Computer Languages: <br /> C++, C, JavaScript, PL/SQL, SQL, Python, C#, Java, React, Scala <br /><br />Fluent In: <br />English, Russian, and Spanish</p></div>
                     <div class="col-lg-4 mr-auto"><p class="lead">Completed coursework Includes: Content Management Systems, Data Analysis, Data Structures, Database Systems, Design and Analysis of Algorithms, Discrete Mathematics, Distributed Systems, Object-Oriented Programming, Programming Language Concepts, Software Testing, Symbolic Programming</p></div>
                 </div>
             </div>
@@ -206,8 +218,9 @@
 					</div>
 				</div>
                 <div class="row">
-                    <div class="col-lg-4 ml-auto"><p class="lead">My name is Mike and I graduated with a degree in Computer Science from DePaul University. I have been programming for almost a decade now and I never backed down from a challenge. Whenever I faced a challenging problem I approached it as a learning opportunity.</p></div>
-                    <div class="col-lg-4 mr-auto"><p class="lead">I've always wanted to create a video game. I grew up playing lots of video games, and as I learned programming I thought it would be fun to make my own. It took awhile but I was able to eventually publish my first video game, Wild Runner, which I'm very proud of. </p></div>
+                    <div class="col-lg-4 ml-auto"><p class="lead">My name is Mike and I graduated with a degree in Computer Science from DePaul University. I have been programming for almost a decade now and something that helped me was to approach every challenge as a learning opportunity. There's always something new to learn. </p></div>
+                    <!-- <div class="col-lg-4 mr-auto"><p class="lead">I've always wanted to create a video game. I grew up playing lots of video games, and as I learned programming I thought it would be fun to make my own. It took awhile but I was able to eventually publish my first video game, Wild Runner, which I'm very proud of. </p></div> -->
+                    <div class="col-lg-4 mr-auto"><p class="lead">I've always been a fan of video games; full of creativity and endless possibilities. It should come as no surprise that I thought it would be fun to make my own. Wild Runner would become the first of many; I cherish that experience and look forward to my next adventure. </p></div>
                 </div>
             </div>
         </section>		
@@ -217,25 +230,25 @@
             <div class="container">
                 <div class="row">
                     <!-- Footer Location-->
-                    <div class="col-lg-4 mb-5 mb-lg-0">
-                        <!-- <h4 class="text-uppercase mb-4">Location</h4>
-                        <p class="lead mb-0">2215 John Daniel Drive<br />Clark, MO 65243</p> -->
-                    </div>
+                    <!-- <div class="col-lg-4 mb-5 mb-lg-0">
+                        <h4 class="text-uppercase mb-4">Location</h4>
+                        <p class="lead mb-0">2215 John Daniel Drive<br />Clark, MO 65243</p>
+                    </div> -->
                     <!-- Footer Social Icons-->
-                    <div class="col-lg-4 mb-5 mb-lg-0">
+                    <div class="w-100 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Around the Web</h4>
                         <!-- <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-facebook-f"></i></a>
 						<a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a> -->
-						<a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/michael-zyskind-016b47160/"><i class="fab fa-fw fa-linkedin-in"></i></a>
+						<a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/michael-zyskind/"><i class="fab fa-fw fa-linkedin-in"></i></a>
 						<a class="btn btn-outline-light btn-social mx-1" href="https://github.com/nonamethe2"><i class="fab fa-fw fa-github-alt"></i></a>
 						<a class="btn btn-outline-light btn-social mx-1" href="https://nonamethe2.itch.io/"><i class="fab fa-fw fa-itch-io"></i></a>
 						<a class="btn btn-outline-light btn-social mx-1" href="https://ko-fi.com/mikethedev"><i class="fas fa-donate"></i></a>
                     </div>
                     <!-- Footer About Text-->
-                    <div class="col-lg-4">
-                        <!-- <h4 class="text-uppercase mb-4">About Freelancer</h4>
-                        <p class="lead mb-0">Freelance is a free to use, MIT licensed Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p> -->
-                    </div>
+                    <!-- <div class="col-lg-4">
+                        <h4 class="text-uppercase mb-4">About Freelancer</h4>
+                        <p class="lead mb-0">Freelance is a free to use, MIT licensed Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+                    </div> -->
                 </div>
             </div>
         </footer>
@@ -454,7 +467,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal6Label">AP American History <br />Class Project</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal7Label">AP American History <br />Class Project</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -486,7 +499,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal6Label">Need for dx/dt <br />(Practice Project)</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal8Label">Need for dx/dt <br />(Practice Project)</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -506,7 +519,39 @@
                 </div>
             </div>
         </div>
-		
+		<!-- Portfolio Modal 9-->
+        <div class="portfolio-modal modal fade" id="portfolioModal9" tabindex="-1" role="dialog" aria-labelledby="portfolioModal9Label" aria-hidden="true">
+            <div class="modal-dialog modal-xl" role="document">
+                <div class="modal-content">
+                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true"><i class="fas fa-times"></i></span>
+                    </button>
+                    <div class="modal-body text-center">
+                        <div class="container">
+                            <div class="row justify-content-center">
+                                <div class="col-lg-8">
+                                    <!-- Portfolio Modal - Title-->
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal9Label">Wild Dungeons</h2>
+                                    <!-- Icon Divider-->
+                                    <div class="divider-custom">
+                                        <div class="divider-custom-line"></div>
+                                        <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                                        <div class="divider-custom-line"></div>
+                                    </div>
+									<!-- Portfolio Modal - Text-->
+                                    <p class="mb-5">Step right up and test your luck, and maybe even your skill, at navigating the new and improved Wild Dungeons. Now featuring unique characters and one enemy. Explore and fight your way through a procedurally generated dungeon like no other (not a guarentee). </p>
+                                    <br />
+                                    <p>Completely reworked from the ground up with updated graphics, a newer version will be available for purchase. There is currently no timeline on when this version will be available. </p>
+                                    <a target="_blank" class="btn btn-primary portfolio-modal" href="https://nonamethe2.itch.io/wild-dungeons"><i class="fas fa-store fa-fw"></i>&nbsp;Store</a>
+                                    <button class="btn btn-primary" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 		
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
