--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.png" />
         <!-- Font Awesome icons (free version)-->
-        <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
+        <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
@@ -44,7 +44,7 @@
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
-                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-icon"><i class="fas fa-laptop-code"></i></div>
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
@@ -60,11 +60,11 @@
                 <!-- Icon Divider-->
                 <div class="divider-custom">
                     <div class="divider-custom-line"></div>
-                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-icon"><i class="fas fa-folder-open"></i></div>
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Grid Items-->
-                <div class="row">
+                <div class="row justify-content-center">
                     <!-- Portfolio Item 1-->
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal1">
@@ -95,7 +95,7 @@
                 </div>
 
                 <!-- Portfolio Item 9 -->
-                <div class="row">
+                <div class="row justify-content-center">
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal9">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
@@ -114,10 +114,10 @@
                 <!-- Icon Divider-->
                 <div class="divider-custom">
                     <div class="divider-custom-line"></div>
-                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-icon"><i class="fas fa-book-open"></i></div>
                     <div class="divider-custom-line"></div>
                 </div>
-				<div class="row">
+				<div class="row justify-content-center">
 					<!-- Portfolio Item 4-->
                     <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
@@ -155,10 +155,10 @@
                 <!-- Icon Divider-->
                 <div class="divider-custom">
                     <div class="divider-custom-line"></div>
-                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-icon"><i class="fas fa-archive"></i></div>
                     <div class="divider-custom-line"></div>
                 </div>
-				<div class="row">
+				<div class="row justify-content-center">
                     <!-- Portfolio Item 7-->
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal7">
@@ -189,7 +189,7 @@
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
-                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-icon"><i class="fas fa-tools"></i></div>
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Skills Section Content-->
@@ -208,7 +208,7 @@
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
-                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-icon"><i class="fas fa-user"></i></div>
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- About Section Content-->
@@ -241,7 +241,7 @@
                 <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Experience</h2>
                 <div class="divider-custom">
                     <div class="divider-custom-line"></div>
-                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-icon"><i class="fas fa-briefcase"></i></div>
                     <div class="divider-custom-line"></div>
                 </div>
 
@@ -250,14 +250,14 @@
                     <li>
                         <input type="checkbox" checked>
                         <i></i>
-                        <h2 class="accHead2">Cognizant - Full Stack Engineer</h2>
+                        <h2 class="accHead2">Cognizant - Software Engineer</h2>
                         <p class="accPar">
                             I contributed to refactoring and cleanup efforts to modernize microservices and meet stricter code
                             quality standards. Additionally, I researched, designed, and implemented bug fixes and other feature changes to
                             improve functionality. I also collaborated with various team members as part of research and development work to
                             gain a better understanding of the product and features being developed.
                             <br /><br />Languages: Java, Python, SQL
-                            <br />Frameworks and other resources: JUnit, Eclipse, AWS
+                            <br />Frameworks and other resources: JUnit, Eclipse, MySQL Workbench, AWS
                         </p>
                     </li>
                     <li>
@@ -300,26 +300,14 @@
         <footer class="footer text-center">
             <div class="container">
                 <div class="row">
-                    <!-- Footer Location-->
-                    <!-- <div class="col-lg-4 mb-5 mb-lg-0">
-                        <h4 class="text-uppercase mb-4">Location</h4>
-                        <p class="lead mb-0">2215 John Daniel Drive<br />Clark, MO 65243</p>
-                    </div> -->
                     <!-- Footer Social Icons-->
                     <div class="w-100 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Around the Web</h4>
-                        <!-- <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-facebook-f"></i></a>
-						<a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a> -->
 						<a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/michael-zyskind/"><i class="fab fa-fw fa-linkedin-in"></i></a>
 						<a class="btn btn-outline-light btn-social mx-1" href="https://github.com/nonamethe2"><i class="fab fa-fw fa-github-alt"></i></a>
 						<a class="btn btn-outline-light btn-social mx-1" href="https://nonamethe2.itch.io/"><i class="fab fa-fw fa-itch-io"></i></a>
 						<a class="btn btn-outline-light btn-social mx-1" href="https://ko-fi.com/mikethedev"><i class="fas fa-donate"></i></a>
                     </div>
-                    <!-- Footer About Text-->
-                    <!-- <div class="col-lg-4">
-                        <h4 class="text-uppercase mb-4">About Freelancer</h4>
-                        <p class="lead mb-0">Freelance is a free to use, MIT licensed Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
-                    </div> -->
                 </div>
             </div>
         </footer>
@@ -635,38 +623,4 @@
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
     </body>
-	
-	<script>
-		/*$(function (){ 
-			var enlarge = true;
-			$('#RESIZABLE').on('click', function (){
-				if(enlarge){
-					$(this).animate({
-						top: '-=100px',
-						width: '30rem',
-						opacity: '0%'
-					});
-					$('#fadeTop').animate({
-						top: '-=60px',
-						width: '30rem',
-						opacity: '100%'
-					});
-					
-				}else{
-					$('#fadeTop').animate({
-						top: '+=60px',
-						width: '15rem',
-						opacity: '0%'
-					});
-					$('#RESIZABLE').animate({
-						top: '+=100px',
-						width: '15rem',
-						opacity: '100%'
-					});
-				}
-				
-				enlarge = !enlarge;
-			});
-		});*/
-	</script>
 </html>
